<resources>
    <string name="app_name">Catalogue Movie UI/UX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>

    <string name="label_share">Share </string>
    <string name="label_detail_movie">Detail Movie</string>
    <string name="label_search_movie">Search Movie</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_upcoming">Upcoming</string>

    <string name="label_search">Search </string>
    <string name="search_hint">search by movie title</string>
    <string name="label_language">Language</string>
    <string name="label_communicate">Communicate</string>

    <string name="send">Send</string>
    <string name="share_article">Share Article</string>


    <string name="label_detail">Detail</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="captain_america">Captain America</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="rate_movie">Movie Rate</string>
    <string name="label_email">Dicoding.com</string>
    <string name="label_name">Candra Angjaya</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="key_reminder_daily">reminder_daily</string>
    <string name="key_reminder_upcoming">reminder_upcoming</string>
    <string name="key_setting_locale">setting_locale</string>

    <string name="label_daily_reminder">Daily Reminder Notification is now</string>
    <string name="label_upcoming_reminder">Upcoming Reminder Notification is now</string>
    <string name="label_activated">activated!</string>
    <string name="label_deactivated">deactivated!</string>

    <string name="label_daily_reminder_title">Daily Reminder Notification</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>

    <string name="label_upcoming_reminder_title">Upcoming Reminder Notification</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>

    <string name="label_setting_locale_title">Setting Locale</string>
    <string name="label_setting_locale_summary">Change your phone localization</string>

    <string name="label_alarm_daily_reminder">Good morning! Ready to pick your new movies today?</string>
</resources>
